# quilt-rs

./: .gitignore  .markdownlintignore  .rumdl.toml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Quilt.java  README.md  clippy.toml  deny.toml  justfile  pom.xml  review.md  roadmap.md
quilt-cli/: CHANGELOG.md  Cargo.toml  README.md
quilt-cli/fixtures/: reference-quilt-rs-browse-output.txt
quilt-cli/src/: cli.rs  main.rs
quilt-cli/src/cli/: browse.rs  commit.rs  create.rs  fixtures.rs  install.rs  list.rs  login.rs  model.rs  pull.rs  push.rs  status.rs  uninstall.rs
quilt-rs/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
quilt-rs/fixtures/: checksummed.jsonl  checksummed.parquet  ref-manifest-sizes-remote.parquet  ref-manifest-sizes.jsonl
quilt-rs/fixtures/equivalent-packages/: 10c3b62176b4fbb25b4988181bb65e3861087403f36f13c8adb66bce52d6471b-canonical.jsonl  10c3b62176b4fbb25b4988181bb65e3861087403f36f13c8adb66bce52d6471b-field-order-missing-meta.jsonl  10c3b62176b4fbb25b4988181bb65e3861087403f36f13c8adb66bce52d6471b-meta-null-key-order.jsonl  b5af547f5ea5f6d7c878cb39592ce1fe0582958f1096b60c1c6c76d19fb5f936-workflow-schemas-canonical.jsonl  b5af547f5ea5f6d7c878cb39592ce1fe0582958f1096b60c1c6c76d19fb5f936-workflow-schemas-key-order.jsonl
quilt-rs/src/: auth.rs  checksum.rs  cli.rs  error.rs  fixtures.rs  flow.rs  installed_package.rs  io.rs  junk.rs  lib.rs  lineage.rs  local_domain.rs  manifest.rs  object_hash.rs  paths.rs  quiltignore.rs  uri.rs  workflow.rs
quilt-rs/src/auth/: oauth.rs  registry.rs  retry.rs  test_utils.rs  tests.rs
quilt-rs/src/checksum/: crc64nvme.rs  remote.rs  sha256.rs  sha256_chunked.rs
quilt-rs/src/cli/: browse.rs  commit.rs  create.rs  install.rs  list.rs  login.rs  model.rs  output.rs  pull.rs  push.rs  status.rs  uninstall.rs
quilt-rs/src/fixtures/: top_hash.rs
quilt-rs/src/flow/: apply_update.rs  browse.rs  certify_latest.rs  commit.rs  create_package.rs  install_package.rs  install_paths.rs  publish.rs  pull.rs  pull_outcome.rs  push.rs  recommit.rs  reset_to_latest.rs  status.rs  uninstall_package.rs  uninstall_paths.rs
quilt-rs/src/installed_package/: set_remote_tests.rs  sync_flow_tests.rs
quilt-rs/src/io/: manifest.rs  parquet.rs  remote.rs  storage.rs
quilt-rs/src/io/manifest/: top_hash_header_tests.rs  top_hash_row_tests.rs
quilt-rs/src/io/remote/: client.rs  host.rs  mocks.rs  object.rs  s3.rs  workflow.rs
quilt-rs/src/io/remote/object/: multipart_sha256_chunked.rs  put_and_request_checksum.rs
quilt-rs/src/io/storage/: auth.rs  local.rs  mocks.rs
quilt-rs/src/lineage/: home.rs  package.rs  status.rs
quilt-rs/src/manifest/: manifest.rs  row.rs  table.rs  top_hasher.rs  workflow.rs
quilt-rs/src/object_hash/: crc64nvme.rs  error.rs  hash.rs  sha256.rs  sha256_chunked.rs
quilt-rs/src/uri/: host.rs  manifest.rs  package.rs  s3.rs  tag.rs
quilt-rs/src/workflow/: config.rs  error.rs  mod.rs  stamp.rs  validate.rs
quilt-sync/src-tauri/: .gitignore  Cargo.toml  Info.plist  README.md  askama.toml  tauri.conf.json
quilt-sync/src-tauri/.cargo/: config.toml
quilt-sync/src-tauri/capabilities/: default.json
quilt-sync/src-tauri/icons/: icon.icns
quilt-sync/src-tauri/locales/: en.toml
quilt-sync/src-tauri/src/: app.rs  autopull.rs  changelog.rs  commands.rs  commit_message.rs  debug_tools.rs  env.rs  error.rs  fswatcher.rs  main.rs  model.rs  notify.rs  oauth.rs  pages.rs  publish_settings.rs  quilt.rs  routes.rs  telemetry.rs  tray.rs  ui.rs  uri.rs
quilt-sync/src-tauri/src/autopull/: reporter.rs  settings.rs  status.rs  tick.rs
quilt-sync/src-tauri/src/autopull/tick/: tests.rs
quilt-sync/src-tauri/src/commands/: auth.rs  commit_data.rs  package_data.rs  package_list.rs  package_ops.rs  settings.rs  system.rs  test_support.rs
quilt-sync/src-tauri/src/fswatcher/: filter.rs  reactor.rs  settings.rs  subscriber.rs
quilt-sync/src-tauri/src/model/: mocks.rs  ops.rs
quilt-sync/src-tauri/src/pages/: commit.rs  error.rs  installed_package.rs  installed_packages_list.rs  login.rs  login_error.rs  merge.rs  settings.rs  setup.rs
quilt-sync/src-tauri/src/telemetry/: diagnostics.rs  mixpanel.rs  sentry.rs  tracing.rs
quilt-sync/src-tauri/src/ui/: breadcrumbs.rs  button.rs  changelog.rs  debug_toolbar.rs  entry.rs  icon.rs  layout.rs  notify.rs  uri.rs
quilt-sync/ui/: Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json
quilt-sync/ui/assets/css/: spinner.css  styles.css
quilt-sync/ui/assets/css/components/: button.css  popover.css  workflow_select.css
quilt-sync/ui/assets/css/pages/: commit.css  installed-package.css  installed-packages-list.css  merge.css  settings.css  setup.css
quilt-sync/ui/assets/css/views/: actionbar.css  appbar.css  entries-toolbar.css  entry.css  installed-package-item.css  layout.css  logo.css  notify.css  popup.css  progress.css  status.css  uri.css
quilt-sync/ui/assets/js/: json-editor.js
quilt-sync/ui/js/: json-editor-glue.js
quilt-sync/ui/src/: commands.rs  components.rs  error_handler.rs  main.rs  pages.rs  tauri.rs  util.rs
quilt-sync/ui/src/components/: buttons.rs  commit_link.rs  icon_button.rs  icon_link.rs  ignore_popup.rs  layout.rs  merge_link.rs  mod.rs  open_in_catalog.rs  open_in_file_browser.rs  pull_button.rs  push_button.rs  set_origin_popup.rs  set_remote_popup.rs  spinner.rs  update_checker.rs  workflow_select.rs
quilt-sync/ui/src/components/buttons/: browse.rs  button_cta.rs  certify_latest.rs  change_origin.rs  collect_logs.rs  commit.rs  commit_and_push.rs  commit_link.rs  commit_revision.rs  create_local_package.rs  create_new_revision.rs  email_support.rs  form_cancel.rs  form_primary.rs  form_secondary.rs  (+33 more)
quilt-sync/ui/src/pages/: commit.rs  error.rs  installed_package.rs  installed_packages_list.rs  login.rs  merge.rs  mod.rs  not_found.rs  remote_package.rs  settings.rs  setup.rs
quilt-uri/: CHANGELOG.md  Cargo.toml  README.md
quilt-uri/src/: error.rs  fixtures.rs  host.rs  lib.rs  manifest.rs  object.rs  package.rs  paths.rs  s3.rs  tag.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+278 files in other folders)
