[workspace]
members = ["quilt-rs", "quilt-cli", "quilt-sync/src-tauri"]
resolver = "2"

[workspace.package]
version = "0.24.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/quiltdata/quilt-rs"

[workspace.dependencies]
async-stream = "0.3.6"
base64 = "0.22.1"
async-trait = "0.1.89"
aws-config = "1.8.14"
aws-credential-types = "1.2.13"
aws-sdk-s3 = "1.124.0"
aws-smithy-async = "1.2.14"
aws-smithy-checksums = "0.64.6"
aws-smithy-types = "1.4.6"
aws-types = "1.3.13"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.5.60", features = ["derive"] }
dirs = "6.0.0"
getrandom = "0.3"
futures = "0.3.32"
futures-util = "0.3.32"
hex = "0.4.3"
multibase = "0.9.2"
multihash = "0.19.3"
percent-encoding = "2.3.2"
reqwest = { version = "0.13.2", features = ["form", "json"] }
serde = { version = "1.0.228", features = ["derive", "serde_derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order", "float_roundtrip"] }
serde-json-fmt = "0.1.0"
sha2 = "0.10.9"
serde_yaml = "0.9.34"
tabled = "0.20.0"
tempfile = "3.26.0"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = "0.1.18"
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = "0.3.22"
url = {version = "2.5.8", features = ["serde"]}
uuid = { version = "1.21.0", features = ["v4"] }

# Dev dependencies
tokio-test = "0.4.5"
test-log = "0.2.19"
