[workspace]
members = ["quilt-rs", "quilt-cli", "quilt-sync/src-tauri", "quilt-sync/ui", "quilt-uri"]
default-members = ["quilt-rs", "quilt-cli", "quilt-sync/src-tauri"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.97"
license = "Apache-2.0"
repository = "https://github.com/quiltdata/quilt-rs"
homepage = "https://www.quiltdata.com"

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
# Documentation pedantic lints — too noisy for our internal API surface.
missing_errors_doc = "allow"
# Stylistic / debatable — keep code as-is.
must_use_candidate = "allow"
module_name_repetitions = "allow"
# Sometimes intentional for trait/API symmetry.
ref_option = "allow"
# Architectural — would require Box::pin sprinkled everywhere.
large_futures = "allow"
# Test helpers commonly return Result aliases to use `?` ergonomically.
unnecessary_wraps = "allow"

[workspace.dependencies]
base64 = "0.22.1"
async-trait = "0.1.91"
aws-config = "1.9.0"
aws-credential-types = "1.3.0"
aws-sdk-s3 = { version = "1.138.1", default-features = false, features = [
    "default-https-client",
    "http-1x",
    "rt-tokio",
    "sigv4a",
] }
aws-smithy-checksums = "0.65.0"
aws-smithy-types = "1.6.1"
aws-types = "1.4.0"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.2", features = ["derive"] }
dirs = "6.0.0"
getrandom = "0.4"
gitignores = "4.8"
hex = "0.4.3"
ignore = "0.4"
jsonschema = { version = "0.48.1", default-features = false }
multibase = "0.9.3"
multihash = "0.19.5"
percent-encoding = "2.3.2"
regex = "1.13.1"
reqwest = { version = "0.13.4", features = ["form", "json"] }
reqwest-middleware = { version = "0.5.2", features = ["form", "json"] }
reqwest-retry = "0.9.1"
serde = { version = "1.0.229", features = ["derive", "serde_derive"] }
serde_json = { version = "1.0.151", features = ["preserve_order", "float_roundtrip"] }
serde-json-fmt = "0.1.0"
sha2 = "0.11.0"
serde_yaml = "0.9.34"
tabled = "0.21.0"
tempfile = "3.27.0"
thiserror = "2.0.19"
tokio = { version = "1.53.0", features = ["full"] }
tokio-stream = "0.1.18"
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = "0.3.23"
url = {version = "2.5.8", features = ["serde"]}
uuid = { version = "1.24.0", features = ["v4"] }

# Dev dependencies
tokio-test = "0.4.5"
test-log = "0.2.21"
