[package]
name = "quilt-cli"
description = "Command-line interface for Quilt data packages"

version = "0.25.1-alpha1"

# Inherit from workspace
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "quilt"
path = "src/main.rs"

[dependencies]
# Library dependencies
quilt-rs = { path = "../quilt-rs" }
quilt-uri = { path = "../quilt-uri" }

# CLI-specific dependencies
clap.workspace = true
dirs.workspace = true
serde_json.workspace = true
tabled.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
test-log.workspace = true
