[package]
name = "quilt-cli"
description = "Command-line interface for Quilt data packages"

version = "0.25.2"

# Inherit from workspace
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "quilt"
path = "src/main.rs"

[dependencies]
# Library dependencies
quilt-rs = { path = "../quilt-rs", version = "0.31.0" }
quilt-uri = { path = "../quilt-uri", version = "0.2.0" }

# CLI-specific dependencies
clap.workspace = true
dirs.workspace = true
serde_json.workspace = true
tabled.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
test-log.workspace = true

# pkg-url overridden: workspace tags as `quilt-cli/v<version>`, not
# cargo-binstall's default `v<version>`. `.tar.gz` hardcoded because
# `{ archive-suffix }` expands to `.tgz`. Asset filename mirrors the
# `binaries` job in `.github/workflows/release-crate.yaml` —
# drift breaks `cargo binstall`.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ name }/v{ version }/{ name }-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "{ name }-{ target }/{ bin }{ binary-ext }"
