[package]
name = "quilt-rs"
description = "Rust library for accessing Quilt data packages."
documentation = "https://docs.quiltdata.com"
homepage = "https://www.quiltdata.com"

# Inherit from workspace
version = "0.29.1-alpha4"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
aws-config.workspace = true
aws-credential-types.workspace = true
aws-sdk-s3.workspace = true
aws-smithy-checksums.workspace = true
aws-smithy-types.workspace = true
aws-types.workspace = true
chrono.workspace = true
getrandom.workspace = true
gitignores.workspace = true
hex.workspace = true
ignore.workspace = true
multibase.workspace = true
multihash.workspace = true
percent-encoding.workspace = true
reqwest.workspace = true
reqwest-middleware.workspace = true
reqwest-retry.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-json-fmt.workspace = true
sha2.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
test-log.workspace = true
