[package]
name = "quilt-rs"
description = "Rust library for accessing Quilt data packages."

# Inherit from workspace
version = "0.34.0-alpha3"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
# Exposes the in-memory mock `Remote`/`Storage` implementations so downstream
# crates can drive quilt-rs flows against a fake bucket in their own tests.
testing = []

[dependencies]
async-trait.workspace = true
base64.workspace = true
aws-config.workspace = true
aws-credential-types.workspace = true
aws-sdk-s3.workspace = true
aws-smithy-checksums.workspace = true
aws-smithy-types.workspace = true
aws-types.workspace = true
chrono.workspace = true
getrandom.workspace = true
gitignores.workspace = true
hex.workspace = true
ignore.workspace = true
jsonschema.workspace = true
multibase.workspace = true
multihash.workspace = true
percent-encoding.workspace = true
regex.workspace = true
reqwest.workspace = true
reqwest-middleware.workspace = true
reqwest-retry.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-json-fmt.workspace = true
sha2.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
quilt-uri = { path = "../quilt-uri", version = "0.4.0" }
url.workspace = true
uuid.workspace = true

[dev-dependencies]
quilt-uri = { path = "../quilt-uri", version = "0.4.0", features = ["test-support"] }
test-log.workspace = true

[lints]
workspace = true
