[package]
name = "quilt-uri"
description = "Parser and types for Quilt+ URIs."

version = "0.3.0-alpha1"

# Inherit from workspace
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
# Enables test-only helpers (e.g. `Default` impls) so downstream crates
# can share the same fixtures in their own tests.
test-support = []

[dependencies]
percent-encoding.workspace = true
serde.workspace = true
thiserror.workspace = true
url.workspace = true

[dev-dependencies]
serde_json.workspace = true
test-log.workspace = true
