[package]
name = "xtask"
version = "0.0.0"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { workspace = true }
clap = { workspace = true }
semver = "1.0"
toml_edit = "0.22"
