[package]
name = "quilt-sync"
version = "0.14.4-alpha5"
authors = ["Quilt Data, Inc."]
description = "Cross-platform desktop application for editing Quilt data packages"
documentation = "https://docs.quiltdata.com"
edition.workspace = true
homepage = "https://www.quiltdata.com"
license = "UNLICENSED"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
# Keep the verbose notation, because it will be (re-)written by tauri-build anyway
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
askama = "0.15.4"
chrono.workspace = true
dotenv = "0.15"
humansize = "2.1.3"
mockall = "0.14.0"
multihash.workspace = true
opener = { version = "0.8.4", features = ["reveal"] }
quilt-rs = { path = "../../quilt-rs" }
rfd = { version = "0.17.2", default-features = false, features = ["gtk3"] }
rust-i18n = "3.1.5"
semver = "1.0.27"
sentry = { version = "0.47.0", features = ["tracing"] }
mixpanel-rs = "0.3.1"
serde.workspace = true
serde_json.workspace = true
serde_qs = "1.0.0"
tauri = { version = "2.10.3", features = ["test", "devtools"] }
tauri-plugin-deep-link = "2.4.7"
tauri-plugin-process = "2.3.1"
tauri-plugin-shell = "2.3.5"
tauri-plugin-updater = "2.10.0"
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url.workspace = true
urlencoding = "2.1.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tokio-test.workspace = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = { version = "2.4.0", features = ["deep-link"] }
