[package]
name = "quilt-sync"
version = "0.18.3-alpha13"
authors = ["Quilt Data, Inc."]
description = "Cross-platform desktop application for editing Quilt data packages"
documentation = "https://docs.quiltdata.com"
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
# Keep the verbose notation, because it will be (re-)written by tauri-build anyway
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
chrono.workspace = true
dotenv = "0.15"
dunce = "1"
mockall = "0.15.0"
opener = { version = "0.8.5", features = ["reveal"] }
quilt-rs = { path = "../../quilt-rs" }
quilt-uri = { path = "../../quilt-uri" }
rfd = { version = "0.17.2", default-features = false, features = ["gtk3"] }
rust-i18n = "4.1.0"
semver = "1.0.28"
sentry = { version = "0.48.4", features = ["tracing"] }
mixpanel-rs = "0.3.1"
notify = "8.2"
notify-debouncer-full = "0.7"
serde.workspace = true
serde_json.workspace = true
serde_qs = "1.1.2"
tauri = { version = "2.11.5", features = ["test", "devtools", "tray-icon", "image-png"] }
tauri-plugin-deep-link = "2.4.9"
tauri-plugin-process = "2.3.1"
tauri-plugin-shell = "2.3.5"
tauri-plugin-updater = "2.10.1"
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-appender = "0.2.5"
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url.workspace = true
urlencoding = "2.1.3"
zip = { version = "8", default-features = false, features = ["deflate"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
serde_yaml.workspace = true
serial_test = "3"
tokio-test.workspace = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = { version = "2.4.2", features = ["deep-link"] }

[lints]
workspace = true
