[package]
name = "quilt-sync-ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
publish = false

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_router = "0.8"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Document", "HtmlElement", "HtmlFormElement", "HtmlTextAreaElement", "Storage", "Window", "Location"] }
serde.workspace = true
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
serde_json.workspace = true
urlencoding = "2"
quilt-uri = { path = "../../quilt-uri" }
send_wrapper = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["DomTokenList", "Element", "HtmlButtonElement", "Node"] }

[lints]
workspace = true
